[gd_scene load_steps=5 format=3 uid="uid://c5gaccfutairv"]

[ext_resource type="Theme" uid="uid://nvlc6745kjh7" path="res://Assets/Themes/pause_menu.tres" id="2_33nxa"]
[ext_resource type="PackedScene" uid="uid://bed7c5m0ens6n" path="res://Scenes/options_menu.tscn" id="3_2wh7r"]
[ext_resource type="Script" path="res://Scripts/PauseMenu.gd" id="3_knfol"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n38e2"]
bg_color = Color(0.741176, 0.780392, 0.819608, 1)
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="PauseUI" type="CanvasLayer"]
process_mode = 3

[node name="PauseMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.0
offset_top = -200.0
offset_right = 97.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_33nxa")
script = ExtResource("3_knfol")

[node name="Panel" type="Panel" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel2" type="Panel" parent="PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -122.5
offset_top = -49.0
offset_right = 122.5
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_n38e2")

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 55
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer2" type="VBoxContainer" parent="PauseMenu/Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PauseMenu/Panel/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "MENU"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/Panel/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="GameOptionsButton" type="Button" parent="PauseMenu/Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
text = "Game Options"

[node name="ExitMainMenuButton" type="Button" parent="PauseMenu/Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
text = "Exit to Main Menu"

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu/Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 12.69)
layout_mode = 2

[node name="ExitGameButton" type="Button" parent="PauseMenu/Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
text = "Exit Game"

[node name="CloseButton" type="Button" parent="PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -27.0
offset_top = 4.0
offset_right = -8.0
offset_bottom = 23.0
grow_horizontal = 0
text = "X"

[node name="GameOptions" parent="." instance=ExtResource("3_2wh7r")]
visible = false

[connection signal="pressed" from="PauseMenu/Panel/MarginContainer/VBoxContainer2/VBoxContainer/GameOptionsButton" to="PauseMenu" method="_on_game_options_button_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/MarginContainer/VBoxContainer2/VBoxContainer/ExitGameButton" to="PauseMenu" method="_on_exit_game_button_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/CloseButton" to="PauseMenu" method="_on_close_button_pressed"]
